Try to fix Safari bug per https://stackoverflow.com/questions/33084810/how-is-possible-that-display-flex-and-align-items-center-do-not-work-anymo

--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,11 @@ h1, h2 {
 .nav {
   width: 1000px;
   display: flex;
+  display: -webkit-flex;
   justify-content: space-evenly;
+  -webkit-justify-content: space-evenly;
   align-items: center;
+  -webkit-align-items: center;
 }
 
 .nav a {
